various modifications - added history to frontpage - updated guide.bib   - new references   - corrected few old ones - removed listings from multi-shot solving - removed listing  from meta programming - introduced section on theory solving (after multi-shot solving) - merged section constraint ASP into theory solving - changed web references from sf to github

--- a/constraint.tex
+++ b/constraint.tex
@@ -9,7 +9,7 @@ and will be included in one of the forthcoming editions of this guide.
 Information on constraint programming with \clingcon\ can be obtained at the following references.
 
 \begin{itemize}
-\item \url{http://potassco.sourceforge.net#clingcon}
+\item \url{http://potassco.org/clingcon}
 \item \cite{geossc09a,ostsch12a} (\clingcon, based upon \gringo~3.0.92 and \clasp~1.3.10)
 \end{itemize}
 
@@ -22,7 +22,7 @@ and will be included in one of the forthcoming editions of this guide.
 Information on constraint programming with \aspartame\ can be obtained at the following references.
 
 \begin{itemize}
-\item \url{http://potassco.sourceforge.net/labs.html}
+\item \url{http://potassco.org/labs}
 \item \url{http://www.cs.uni-potsdam.de/aspartame}
 \item \cite{bageinscsotawe13a} describes \aspartame\ and how it allows for solving finite linear CSPs in ASP
 \end{itemize}
