--- a/future.tex
+++ b/future.tex
@@ -1,7 +1,7 @@
 \section{Future Work}\label{sec:future}
 
 We conclude this guide with a brief outlook on the future development
-of \gringo~\cite{gescth07a}, \clasp~\cite{gekasc09c}, and \clingo~\cite{gekakasc14b}.
+of \gringo~\cite{gescth07a}, \clasp~\cite{gekasc09c}, and \clingo~\cite{gekakasc14b,gekakaosscwa16a}.
 An important goal of future releases will be improving usability
 by adding functionalities that make some errors and warnings obsolete.
 In particular, we consider adding support for arbitrary positive loops
