--- a/guide.tex
+++ b/guide.tex
@@ -36,13 +36,13 @@
 \include{quickstart}
 \include{language}
 \include{multi}
+\include{theory}
 \include{examples}
 \include{options}
 \include{errors}
 \include{meta}
 \include{heuristic}
 \include{prefopt}
-\include{constraint}
 \include{configuration}
 \include{future}
 \newpage
@@ -50,12 +50,12 @@
 \include{resources}
 % \include{lparse}
 \include{gringo3}
-\include{iclingo}
+% \include{iclingo}
 \newpage
 \phantomsection
 \addcontentsline{toc}{section}{References}
 \bibliographystyle{plain}
-\bibliography{guide}
+\bibliography{guide} % \bibliography{lit,akku,procs,misc} && bibexport -o guide.bib guide.aux
 \newpage
 \phantomsection
 \addcontentsline{toc}{section}{Index}
