--- a/macro.tex
+++ b/macro.tex
@@ -24,35 +24,98 @@
 
 % Systems
 
-\newcommand{\sysfont}[1]{\texttt{#1}}
+\newcommand{\sysfont}{\textit}
+\newcommand{\acthex}{\sysfont{acthex}}
+\newcommand{\adsolver}{\sysfont{adsolver}}
+\newcommand{\anthem}{\sysfont{anthem}}
+\newcommand{\asparagus}{\sysfont{asparagus}}
+\newcommand{\aspartame}{\sysfont{aspartame}}
+\newcommand{\aspic}{\sysfont{aspic}}
+\newcommand{\aspcud}{\sysfont{aspcud}}
+\newcommand{\aspmt}{\sysfont{aspmt}}
+\newcommand{\asprin}{\sysfont{asprin}}
+\newcommand{\assat}{\sysfont{assat}}
+\newcommand{\berkmin}{\sysfont{berkmin}}
+\newcommand{\chuffed}{\sysfont{chuffed}}
+\newcommand{\chasp}{\sysfont{chasp}}
+\newcommand{\claspD}{\sysfont{claspD}}
+\newcommand{\claspar}{\sysfont{claspar}}
+\newcommand{\claspfolio}{\sysfont{claspfolio}}
+\newcommand{\clasp}{\sysfont{clasp}}
+\newcommand{\claspre}{\sysfont{claspre}}
+\newcommand{\clingcon}{\sysfont{clingcon}}
+\newcommand{\clingo}{\sysfont{clingo}}
+\newcommand{\cmodels}{\sysfont{cmodels}}
+\newcommand{\coala}{\sysfont{coala}}
+\newcommand{\cplex}{\sysfont{cplex}}
+\newcommand{\dingo}{\sysfont{dingo}}
+\newcommand{\dflat}{\sysfont{dflat}}
+\newcommand{\dlvhex}{\sysfont{dlvhex}}
+\newcommand{\dlv}{\sysfont{dlv}}
+\newcommand{\ezcsp}{\sysfont{ezcsp}}
+\newcommand{\ezsmt}{\sysfont{ezsmt}}
+\newcommand{\fastdownward}{\sysfont{fastdownward}}
+\newcommand{\ftolp}{\sysfont{f2lp}}
+\newcommand{\gasp}{\sysfont{gasp}}
+\newcommand{\gfd}{\sysfont{g12fd}}
+\newcommand{\gecode}{\sysfont{gecode}}
+\newcommand{\gidl}{\sysfont{gidl}}
+\newcommand{\gnt}{\sysfont{gnt}}
+\newcommand{\gringo}{\sysfont{gringo}}
+\newcommand{\iclingo}{\sysfont{iclingo}}
+\newcommand{\idp}{\sysfont{idp}}
+\newcommand{\inca}{\sysfont{inca}}
+\newcommand{\jdlv}{\sysfont{jdlv}}
+\newcommand{\lctocasp}{\sysfont{lc2casp}}
+\newcommand{\lparse}{\sysfont{lparse}}
+\newcommand{\lpsolve}{\sysfont{lpsolve}}
+\newcommand{\lptodiff}{\sysfont{lp2diff}}
+\newcommand{\lptosat}{\sysfont{lp2sat}}
+\newcommand{\mchaff}{\sysfont{mchaff}}
+\newcommand{\measp}{\sysfont{measp}}
+\newcommand{\metasp}{\sysfont{metasp}}
+\newcommand{\mingo}{\sysfont{mingo}}
+\newcommand{\minisat}{\sysfont{minisat}}
+\newcommand{\minisatid}{\sysfont{minisatid}}
+\newcommand{\minizinc}{\sysfont{minizinc}}
+\newcommand{\mznfzn}{\sysfont{mzn2fzn}}
+\newcommand{\nomorepp}{\sysfont{nomore++}}
+\newcommand{\oclingo}{\sysfont{oclingo}}
+\newcommand{\omiga}{\sysfont{omiga}}
+\newcommand{\piclasp}{\sysfont{piclasp}}
+\newcommand{\picosat}{\sysfont{picosat}}
+\newcommand{\picat}{\sysfont{picat}}
+\newcommand{\picatsat}{\sysfont{picatsat}}
+\newcommand{\plasp}{\sysfont{plasp}}
+\newcommand{\quontroller}{\sysfont{quontroller}}
+\newcommand{\reify}{\sysfont{reify}}
+\newcommand{\rosoclingo}{\sysfont{rosoclingo}}
+\newcommand{\sag}{\sysfont{sag}}
+\newcommand{\satz}{\sysfont{satz}}
+\newcommand{\siege}{\sysfont{siege}}
+\newcommand{\smac}{\sysfont{smac}}
+\newcommand{\smodelscc}{\sysfont{smodels$_{\!cc}$}}
+\newcommand{\smodelsr}{\sysfont{smodels}$_r$}
+\newcommand{\smodels}{\sysfont{smodels}}
+\newcommand{\sugar}{\sysfont{sugar}}
+\newcommand{\teaspoon}{\sysfont{teaspoon}}
+\newcommand{\unclasp}{\sysfont{unclasp}}
+\newcommand{\wasp}{\sysfont{wasp}}
+\newcommand{\zchaff}{\sysfont{zchaff}}
+\newcommand{\zzz}{\sysfont{z3}}
 
-\newcommand{\aspartame}[0]{\sysfont{aspartame}}
-\newcommand{\assat}[0]{\sysfont{assat}}
-\newcommand{\asprin}[0]{\sysfont{asprin}}
-\newcommand{\clasp}[0]{\sysfont{clasp}}
-\newcommand{\claspD}[0]{\sysfont{claspD}}
-\newcommand{\hclasp}[0]{\sysfont{hclasp}}
-\newcommand{\claspfolio}[0]{\sysfont{claspfolio}}
-\newcommand{\claspre}[0]{\sysfont{claspre}}
-\newcommand{\piclasp}[0]{\sysfont{piclasp}}
-\newcommand{\smac}[0]{\sysfont{SMAC}}
-\newcommand{\clingo}[0]{\sysfont{clingo}}
-\newcommand{\clingcon}[0]{\sysfont{clingcon}}
-\newcommand{\cmodels}[0]{\sysfont{cmodels}}
-\newcommand{\dlv}[0]{\sysfont{dlv}}
-\newcommand{\gnt}[0]{\sysfont{gnt}}
-\newcommand{\gringo}[0]{\sysfont{gringo}}
-\newcommand{\dlvcomplex}[0]{\sysfont{dlv-complex}}
-\newcommand{\iclingo}[0]{\sysfont{iclingo}}
-\newcommand{\oclingo}[0]{\sysfont{oclingo}}
-\newcommand{\lparse}[0]{\sysfont{lparse}}
-\newcommand{\nomorepp}[0]{\sysfont{nomore++}}
-\newcommand{\reify}[0]{\sysfont{reify}}
-\newcommand{\smodels}[0]{\sysfont{smodels}}
-\newcommand{\smodelscc}[0]{\sysfont{smodels}$_{\text{\sysfont{cc}}}$}
-\newcommand{\lua}{\sysfont{lua}}
-\newcommand{\python}{\sysfont{python}}
-\renewcommand{\dagger}{**}
+\newcommand{\clingoM}[1]{\clingo{\small\textnormal{[}\textsc{#1}\textnormal{]}}}
+\newcommand{\ASPm}[1]{ASP\raisebox{.7pt}{[\textsc{#1}]}}
+
+\newcommand{\flatzinc}{\sysfont{FlatZinc}}
+\newcommand{\aspif}{\sysfont{aspif}}
+
+\newcommand{\python}{Python}
+\newcommand{\lua}{Lua}
+\newcommand{\cpp}{C++}
+\newcommand{\C}{C}
+\newcommand{\java}{Java}
+\newcommand{\haskell}{Haskell}
 
 % Environments
 
