--- a/resources.tex
+++ b/resources.tex
@@ -3,29 +3,29 @@
 \label{sec:resources}
 
 \begin{description}
-\item [Books] \cite{baral03a,gekakasc12a,gelkah14a}
+\item [Books] \cite{baral02a,gekakasc12a,gelkah14a}
 \item [Language Standard] \cite{aspcore2}
-\item [Semantics of \gringo's input language] \cite{gehakalisc14a,haliya14a}
+\item [Semantics of \gringo's input language] \cite{gehakalisc15a}
 \item [Potassco publications] \
   \begin{description}
   \item [Articles]      \url{http://www.cs.uni-potsdam.de/wv/publications/index.html}
-  \item [Potassco book] \url{http://potassco.sourceforge.net/book.html}
+  \item [Potassco book] \url{http://potassco.org/book}
   \end{description}
 \item [Potassco mailing lists] \
   \begin{description}
   \item [\texttt{potassco-users}]    \url{http://sourceforge.net/p/potassco/mailman/potassco-users}
   \item [\texttt{potassco-announce}] \url{http://sourceforge.net/p/potassco/mailman/potassco-announce}
   \end{description}
-\item [Potassco videos]            \url{http://potassco.sourceforge.net/videos.html}
-\item [Potassco teaching material] \url{http://potassco.sourceforge.net/teaching.html}
-\item [Potassco FAQ]               \url{http://potassco.sourceforge.net/faq.html}
-\item [Potassco sourceforge resources] \
+\item [Potassco videos]            \url{http://potassco.org/doc/videos}
+\item [Potassco teaching material] \url{http://potassco.org/teaching}
+\item [Potassco FAQ]               \url{http://potassco.org/doc/faq}
+\item [Potassco issues] \
   \begin{description}
-  \item [Bug tracker]      \url{http://sourceforge.net/p/potassco/bugs}
-  \item [Feature requests] \url{http://sourceforge.net/p/potassco/bugs}
-  \item [Wiki]             \url{http://sourceforge.net/p/potassco/wiki}
+  \item [Clasp]       \url{http://github.com/potassco/clasp/issues}
+  \item [Clingo]      \url{http://github.com/potassco/clingo/issues}
+  \item or find the respective project among the various gits at \url{http://github.com/potassco}
   \end{description}
-\item [Further resources] \url{http://potassco.sourceforge.net/links.html}
+% \item [Further resources] \url{http://potassco.org/links.html}
 \end{description}
 
 %%% Local Variables: 
