--- a/multi.tex
+++ b/multi.tex
@@ -6,29 +6,33 @@ and will be included in one of the forthcoming editions of this guide.
 Information on multi-shot solving with \clingo\ can be obtained at the following references.
 
 \begin{itemize}
-\item \cite{gekakasc14b,gekaobsc15a}
-\item \code{/examples/scripting/} in \gringo/\clingo\ distribution
-\item API reference \url{http://potassco.sourceforge.net/gringo.html}
-\end{itemize}
-
-\subsection{Incremental Solving}
-\label{sec:isolving}
-
-\begin{itemize}
-\item \lstinline{#step}
-\item \lstinline{#check}
+\item \cite{kascwa17a,gekakasc17a}
+\item \code{/examples/clingo/} in \gringo/\clingo\ distribution
+\item API reference
   \begin{itemize}
-  \item starts at 0
-(For example, this is usful in planning to capture situationss where the goal is already satisfied in te initial situation)
-  \item has external \lstinline{query/1}
+  \item Version 4.5.4:  \url{http://potassco.sourceforge.net/gringo.html}
+  \item Series 5:       \url{http://potassco.org/clingo}
   \end{itemize}
 \end{itemize}
 
-\lstinputlisting[caption={\lstinline{gringo/examples/clingo/iclingo/incmode-py.lp}}]{examples/incmode-py.lp}
+% \subsection{Incremental Solving}
+% \label{sec:isolving}
 
-\lstinputlisting[caption={\lstinline{gringo/examples/clingo/iclingo/incmode-lua.lp}}]{examples/incmode-lua.lp}
+% \begin{itemize}
+% \item \lstinline{#step}
+% \item \lstinline{#check}
+%   \begin{itemize}
+%   \item starts at 0
+% (For example, this is usful in planning to capture situationss where the goal is already satisfied in te initial situation)
+%   \item has external \lstinline{query/1}
+%   \end{itemize}
+% \end{itemize}
 
-\lstinline{#include <incmode>.}
+% \lstinputlisting[caption={\lstinline{gringo/examples/clingo/iclingo/incmode-py.lp}}]{examples/incmode-py.lp}
+
+% \lstinputlisting[caption={\lstinline{gringo/examples/clingo/iclingo/incmode-lua.lp}}]{examples/incmode-lua.lp}
+
+% \lstinline{#include <incmode>.}
 
 %%% Local Variables: 
 %%% mode: latex
