fixing headers with macro \ASPm{}

--- a/theory.tex
+++ b/theory.tex
@@ -33,7 +33,7 @@ Information on theory solving with \clingo\ can be obtained at the following ref
 
 \subsection{ASP and Constraint Programming}\label{sec:constraint}
 
-\subsubsection{\ASPm{CP} with \clingcon}
+\subsubsection{ASP[CP] with \clingcon}
 \label{sec:clingcon}
 
 \begin{itemize}
@@ -55,7 +55,7 @@ Information on constraint programming with \aspartame\ can be obtained at the fo
 \item \cite{bageinscsotawe13a} describes \aspartame\ and how it allows for solving finite linear CSPs in ASP
 \end{itemize}
 
-\subsubsection{\ASPm{CP} with \gringo}
+\subsubsection{ASP[CP] with \gringo}
 
 Grounder \gringo\ features some \textcolor{red}{experimental} means for expressing finite linear constraint satisfaction problems within ASP's modeling language.
 The linear constraints are compiled into normal rules following the order encoding \cite{tatakiba09a,bageinscsotawe13a}.
