inserting current version

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -72,7 +72,7 @@ Depending on the viewer, a right or double-click should initiate saving.
 \vfill
 
 \noindent
-Second edition, \today\ % \ (\SVNREVISION)
+Second edition, version 2.1.0, \today\ % \ (\SVNREVISION)
 
 \bigskip
 \noindent
