implemented several minor changes

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -42,13 +42,9 @@ This work is licensed under a Creative Commons Attribution-ShareAlike 4.0\\ Inte
 
 \bigskip
 \noindent
-Version 2.0.0 of this guide generally refers to \gringo\ and \clingo\ series 4 as well as \clasp\ series 3;
-full conformity is obtained with \gringo~4.5, \clingo~4.5 and \clasp~3.1.
-
-\smallskip
-\noindent
-Version 2.1.0 of this guide upgrades Section~\ref{sec:heuristic} to \clingo{} series~5,
-and Section~\ref{sec:asprin} to \asprin~3.0, using \clingo~5.
+This is version~2.1.0 of the Potassco guide;
+it upgrades all code to \clingo{} series 5.
+As well, Section~\ref{sec:asprin} describes \asprin~3.0.
 
 \medskip
 \noindent
