--- a/multi.tex
+++ b/multi.tex
@@ -6,13 +6,9 @@ and will be included in one of the forthcoming editions of this guide.
 Information on multi-shot solving with \clingo\ can be obtained at the following references.
 
 \begin{itemize}
-\item \cite{kascwa17a,gekakasc17a}
-\item \code{/examples/clingo/} in \gringo/\clingo\ distribution
-\item API reference
-  \begin{itemize}
-  \item Version 4.5.4:  \url{http://potassco.sourceforge.net/gringo.html}
-  \item Series 5:       \url{http://potassco.org/clingo}
-  \end{itemize}
+\item Literature: \cite{kascwa17a,gekakasc17a}
+\item Examples: \code{/examples/clingo/} in \gringo/\clingo\ distribution
+\item API reference: \url{http://potassco.org/clingo}
 \end{itemize}
 
 % \subsection{Incremental Solving}
